bugfix addPhoneBtn on mobile screen

--- a/src/components/AddPhoneModal/AddPhoneModal.module.css
+++ b/src/components/AddPhoneModal/AddPhoneModal.module.css
@@ -7,8 +7,10 @@
 .addPhoneBtn {
   margin: 20px auto;
   text-align: center;
-  border: 0;
   background-color: transparent;
+  color: black;
+  font-weight: bold;
+  padding: 6px 10px;
 }
 .addPhoneBtn:hover {
   scale: 1.1;
